<resources>

    <string name="recommendText">Ваши данные:</string>
    <string name="checkBoxConvention">Принять соглашения</string>
    <string name="buttonLogin">Login</string>
    <string name="enterPassword">Введите пароль</string>
    <string name="enterEmail">Введите email</string>
    <string name="imageDescription">image</string>
    <string name="app_name">app_name</string>
    <string name="spongeBobSong">
        Are ya\' ready, kids?\n
        Aye, aye Captain!\n
        I can\'t hear you!\n
        Aye, aye, captain!\n
        Oh!\n\n

        Who lives in a pineapple under the sea?\n
        SpongeBob SquarePants!\n
        Absorbent and yellow and porous is he\n
        SpongeBob SquarePants!\n
        If nautical nonsense be something you wish\n
        SpongeBob SquarePants!\n
        Then drop on the deck and flop like a fish!\n
        SpongeBob SquarePants!\n
        Ready?!\n\n

        SpongeBob SquarePants!\n
        SpongeBob SquarePants!\n
        SpongeBob SquarePants!\n
        SpongeBob SquarePants!\n\n

        Ah-hah\n
        Hahaha\n
        Ah-hah, hahahar\n\n\n\n
    </string>
    <string name="ZenitListTextView">Зенит</string>
    <string name="LokoListTextView">Локомотив</string>
    <string name="KrasnodarListTextView">Краснодар</string>
    <string name="RostovListTextView">Ростов</string>
    <string name="CskaListTextView">ЦСКА</string>

    <string name="ZenitInfo">
        «Зени́т» — советский и российский футбольный клуб из Санкт-Петербурга,
        выступающий в премьер-лиге. \n\n
        Чемпион СССР 1984, пятикратный чемпион России,
        обладатель Кубка СССР 1944, трёхкратный обладатель Кубка России,
        обладатель Кубка сезона 1985, четырёхкратный обладатель Суперкубка России,
        обладатель Кубка Премьер-лиги 2003, обладатель Кубка УЕФА 2007/08,
        обладатель Суперкубка УЕФА 2008.
    </string>

    <string name="LokoInfo">
        «Локомоти́в» — российский профессиональный футбольный клуб из Москвы.Основан 23 июля 1922 года.\n\n
        Один из старейших футбольных клубов России, ведущий свою историю с момента основания команды «Казанка»
        при Московско-Казанской железной дороге, затем неоднократно менявший своё название.
    </string>

    <string name="KrasnodarInfo">
        «Краснода́р» — российский профессиональный футбольный клуб из Краснодара,
        выступающий в чемпионате России. \n\n
        Основан 22 февраля 2008 года. Финалист Кубка России сезона 2013/14,
        бронзовый призёр чемпионата России сезона 2014/15 и 2018/19.
    </string>

    <string name="RostovInfo">
        «Росто́в» — российский футбольный клуб из Ростова-на-Дону. Основан 10 мая 1930 года. \n\n
        В 1950 году клуб впервые принял участие в розыгрыше чемпионата СССР по футболу.\n\n
        Наивысшего результата достиг в 1991 году, заняв 4-е место в турнире клубов Первой лиги,
        что позволило клубу уже следующий сезон начать в элитном дивизионе только что образованного чемпионата России.
    </string>

    <string name="CSKAInfo">
        ЦСКА — российский футбольный клуб из Москвы, в прошлом — часть Центрального спортивного клуба Армии.\n\n
        Один из старейших и самых титулованных клубов в постсоветской истории российского футбола,\n
        ведущий свою историю от команды ОЛЛС (Общество любителей лыжного спорта), основанной в 1911 году.\n\n

    </string>

</resources>
